syntax = "proto3";
package zetachain.zetacore.emissions;

import "cosmos/base/query/v1beta1/pagination.proto";
import "zetachain/zetacore/emissions/params.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/zeta-chain/node/x/emissions/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/zeta-chain/emissions/params";
  }
  // Queries a list of ListBalances items.
  rpc ListPoolAddresses(QueryListPoolAddressesRequest)
      returns (QueryListPoolAddressesResponse) {
    option (google.api.http).get = "/zeta-chain/emissions/list_addresses";
  }

  // Queries a list of ShowAvailableEmissions items.
  rpc ShowAvailableEmissions(QueryShowAvailableEmissionsRequest)
      returns (QueryShowAvailableEmissionsResponse) {
    option (google.api.http).get =
        "/zeta-chain/emissions/show_available_emissions/{address}";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryListPoolAddressesRequest {}

message QueryListPoolAddressesResponse {
  string undistributed_observer_balances_address = 1;
  string undistributed_tss_balances_address = 2;
  string emission_module_address = 3;
}

message QueryShowAvailableEmissionsRequest { string address = 1; }

message QueryShowAvailableEmissionsResponse { string amount = 1; }

// this line is used by starport scaffolding # 3
